refactor: remove unused imports, replace unnecessary collect calls, replace lambda with method reference